C++ Project/.metadata/.plugins/org.eclipse.cdt.ui/Sahur-imsa'.build.log
19:00:01 **** Incremental Build of configuration Debug for project Sahur-imsa' ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o app_sahur.o "..\\app_sahur.cpp" 
..\app_sahur.cpp: In function 'int fibo(int)':
..\app_sahur.cpp:9:3: error: 'printf' was not declared in this scope
   printf("fibo(%d) and this function recur: %d \n",n,counter++);
   ^~~~~~
..\app_sahur.cpp:9:3: note: suggested alternative: '__int8'
   printf("fibo(%d) and this function recur: %d \n",n,counter++);
   ^~~~~~
   __int8
..\app_sahur.cpp:8:7: warning: unused variable 'ans' [-Wunused-variable]
   int ans;
       ^~~
..\app_sahur.cpp: In function 'int main()':
..\app_sahur.cpp:26:3: error: 'printf' was not declared in this scope
   printf("Soulution of the Problem %d",number );
   ^~~~~~
..\app_sahur.cpp:26:3: note: suggested alternative: '__int8'
   printf("Soulution of the Problem %d",number );
   ^~~~~~
   __int8

19:00:03 Build Finished (took 2s.191ms)

